# GRAG

./: .env.example  .gitignore  AI-INSTRUCTIONS.md  CLAUDE.md  HANDOFF-main.md  HANDOFF-sub.md  README.md  USAGE.md  app.py  backup_db.py  cleanup_db.py  config.py  db_status.py  evaluate.py  graph_export.py  graph_viz.py  graphrag_cli.py  implementation_plan.md  init_db.py  process_inbox.py  pyproject.toml  query.py  requirements.txt  restore_db.py  schemas.py  walkthrough.md
adapters/: cli_llm_adapter.py  embedding_adapter.py  llm_adapter.py  local_llm_adapter.py
db/: document_store.py  graph_manager.py  sqlite_manager.py  vector_manager.py
docs/: IDEA.md
pipeline/: bridge.py  community_detector.py  community_reporter.py  desc_summarizer.py  entity_resolution.py  ingest.py
tests/: conftest.py  test_backup.py  test_bridge.py  test_cleanup_db.py  test_cli_llm_adapter.py  test_community_detector.py  test_community_reporter.py  test_db_status.py  test_desc_summarizer.py  test_document_store.py  test_entity_resolution.py  test_evaluate.py  test_graph_export.py  test_graph_manager.py  test_graph_viz.py  test_graphrag_cli.py  test_llm_adapter.py  test_local_llm_adapter.py  test_pipeline_ingest.py  test_process_inbox.py  test_query.py  test_query_global.py  test_restore.py  test_schemas.py  test_sqlite_manager.py  test_vector_manager.py
